fix: Fix scrollbars

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,8 @@ body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+html,
+body {
+  overflow: hidden;
+}
